# chat-app

./: .env.example  .gitignore  Dockerfile.ingestion  Dockerfile.ui  README.md  docker-compose.yml  install_docker.sh  nginx.conf  ping_vllm.sh  pyproject.toml  requirements.txt  shutdown.sh  update_instance.sh
.github/workflows/: ci.yml
data/processed/: 2025_legislative_elections.csv  candidates.parquet  circonscriptions.parquet  constituencies.parquet  entity_alias.parquet  parties.parquet  regions.parquet  results.parquet  turnout.parquet
grafana/dashboards/: vllm_dashboard.json
grafana/provisioning/dashboards/: dashboard_config.yml  vllm_dashboard.json
grafana/provisioning/datasources/: datasource.yml
mlflow_data/: mlflow.db
notebooks/: chat_pipeline.ipynb  check_vLLM.ipynb  mlflow.db  pdf_data_extraction.ipynb
prometheus/: prometheus.yml
scripts/: install_docker_compose.sh
src/: __init__.py  agent.py  chat_app.py  config.py  db.py  ingeston.py  init.py  spell_check.py  sql_agent.py  utils.py  vllm_ckeck.py
src/agents/: agent.py  hybrid_agent.py  rag_agent.py  sql_agent.py
src/db/: check_fts.py  db.py  election_db.py  sql_agent.py  views.sql
tests/: test.txt  test_sql_agent.py
