[project]
name = "chat-app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-core",
    "mlflow>=3.6.0",
    "streamlit", 
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "sqlparse>=0.4.4",
    "prometheus-client>=0.17.1",
    "sqlite-vec>=0.1.0",
    "openai>=1.0.0",
    "python-magic",
    "sqlalchemy",
    "plotly",
    "tomli",
    "requests",
    "ipywidgets",
    "sentence-transformers"
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "python-dotenv>=1.2.1",
    "jupyterlab>=4.5.0",
    "ioywidgets>=8.1.8",
    "streamlit>=1.31.0",
    "openai>=1.10.0",
    "pymupdf>=1.23.0",
    "langchain>=0.1.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.vllm-stack]
gpu_image = "vllm/vllm-openai:latest"
cpu_image = "openeuler/vllm-cpu:latest" # Official CPU-optimized build

[tool.db]
db_name='elections.db'

[tool.setuptools]
package-dir = {"" = "src"}